# lab3_ch

./: .gitignore  CMakeLists.txt
data/: LU.cpp  data.txt  ~$отчет.docx  отчет.docx
src/: main.cpp  task.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
src/plot/: task1.py  task2.py  task3.py
